--- a/noticias-cidade/index.html
+++ b/noticias-cidade/index.html
@@ -24,8 +24,17 @@
           
             <div id="conteudo">
                 <div id="primario">Primário</div>
-                <div id="secundario">Secundário</div>
-                <div id="lateral">Lateral</div>
+                <div id="secundario">Secundario</div>
+                <!--Início lateral-->
+                <div id="lateral">
+                    <div class="caixa">
+                        <h2>Entrevistas</h2>
+                        <div class="caixa-conteudo">
+                            Conteudo
+                        </div>
+                    </div>
+                <!--Fim lateral-->
+                </div>
             </div>
          
         </div><!-- Fim do Countainer -->  
